<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".ui.fragments.DashboardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constLayoutDashboard"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#0A2472"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtDashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"

            android:letterSpacing="0.01"
            android:text="@string/dashboard"
            android:textColor="#FFFFFF"
            android:textFontWeight="200"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/settingsBtn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="170dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:src="@drawable/ic_settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtDashboard"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#FFFFFF" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/circleDashboard"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="296dp"
        android:layout_marginBottom="643dp"
        android:src="@drawable/ic_btn_candidate_select"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constLayoutDashboard"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/kedarDashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="180dp"

        android:layout_marginBottom="2dp"
        android:text="@string/kedar"
        android:textColor="#000000"
        android:textFontWeight="800"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/timePeriod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/circleDashboard"
        app:layout_constraintTop_toBottomOf="@+id/constLayoutDashboard" />

    <TextView
        android:id="@+id/timePeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"

        android:layout_marginEnd="250dp"
        android:layout_marginBottom="29dp"
        android:text="@string/timePeriod"
        android:textColor="#6E7B96"
        android:textFontWeight="600"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/circleDashboard"
        app:layout_constraintTop_toBottomOf="@+id/kedarDashboard" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constLayoutDashboard">

        <TextView
            android:id="@+id/bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"

            android:padding="10dp"
            android:text="@string/bio"
            android:textColor="#051650"
            android:textFontWeight="1000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/write"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"

            android:padding="5dp"
            android:text="@string/write"
            android:textColor="#6E7B96"
            android:textFontWeight="800"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <TextView
            android:id="@+id/yourVotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"

            android:padding="10dp"
            android:text="@string/yourVotes"
            android:textColor="#051650"
            android:textFontWeight="1000"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/arrowdashboard2"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/arrow_right"
            android:layout_gravity="right|center_vertical"
            android:padding="5dp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <TextView
            android:id="@+id/yourElections"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"

            android:padding="10dp"
            android:text="@string/your_elections"
            android:textColor="#051650"
            android:textFontWeight="1000"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/arrowdashboard1"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/arrow_right"
            android:layout_gravity="right|center_vertical"
            android:padding="5dp"/>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signOutBtn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="#123499"

        android:text="@string/logOut"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textFontWeight="800"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"/>

    <TextView
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="126dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="126dp"

        android:text="@string/deleteAccount"
        android:textAlignment="center"
        android:textColor="#C1222C"
        android:textFontWeight="800"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signOutBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>